# mesh-graph

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.toml.example  docker-compose.observability.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-container.yml
src/mesh_graph/: __init__.py  config.py  db.py  main.py  observability.py  utils.py
src/mesh_graph/api/: app.py  cache.py  geo.py  models.py  ui.py
src/mesh_graph/api/static/: style.css
src/mesh_graph/api/templates/: base.html  dashboard.html  network.html  node_detail.html  nodes_list.html  traceroute_detail.html  traceroutes_list.html
src/mesh_graph/api/templates/partials/: map.html  node_table_rows.html  trace_table_rows.html
src/mesh_graph/geo/: __init__.py  builder.py
src/mesh_graph/graph/: builder.py  renderer.py
src/mesh_graph/ingestion/: base.py  mqtt.py
tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_db.py  test_geojson_api.py  test_geojson_builder.py  test_graph_builder.py  test_graph_renderer.py  test_ingestion_mqtt.py  test_positions.py
