[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "paho-mqtt>=2.0.0",
    "networkx>=3.3",
    "pydot>=2.0.0",
    "cryptography>=42.0.0",
    "protobuf>=4.25.0",
    "meshtastic>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
mesh-graph = "mesh_graph.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
