[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "paho-mqtt>=2.0.0",
    "networkx>=3.3",
    "pydot>=2.0.0",
    "cryptography>=42.0.0",
    "protobuf>=4.25.0",
    "meshtastic>=2.3.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "hypothesis>=6.155.1",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
]

[project.scripts]
mesh-graph = "mesh_graph.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
